# meridian-crewai-deploy-orchestrator

./: .gitignore  ENHANCED_README.md  LICENSE  MVP_SUMMARY.md  PHASE2_TEST_RESULTS.md  PUBLICATION_READY.md  QUICKSTART.md  README.md  orchestrator-cli.py  pyproject.toml  requirements.txt  setup.py  test_enhanced_orchestrator.py  test_orchestrator.py
examples/simple_agent/: agent.py  requirements.txt
examples/web_research_agent/: main.py  requirements.txt
src/: enhanced_orchestrator.py  orchestrator.py
test_deployments/simple/: Dockerfile  requirements.txt
test_deployments/web/: prometheus.yml  requirements.txt
test_deployments/web/grafana/: dashboard.json
test_output_simple/: health_check.py  prometheus.yml
test_output_simple/grafana/provisioning/datasources/: datasource.yml
test_output_web/: Dockerfile
test_output_web/grafana/provisioning/datasources/: datasource.yml
